update unmarshalling to use new org.apache.xmlbeans.impl.richParser.XMLStreamReaderExt and so delete lots of code that is now no longer needed
git-svn-id: https://svn.apache.org/repos/asf/xmlbeans/trunk@110264 13f79535-47bb-0310-9956-ffa450edef68